--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -14,6 +14,7 @@
     "hbs": "~4.0.1",
     "mongoose": "^5.0.0-rc1",
     "morgan": "~1.9.0",
+    "nodemon": "^1.14.7",
     "serve-favicon": "~2.4.5"
   }
 }
