--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.0-rc1",
+    "mongoose": "^5.0.0-rc2",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.7",
     "serve-favicon": "~2.4.5"
