--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "concurrently \"nodemon server.js\" \"cd ./client  && npm start \" ",
+    "postinstall": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
-    "express": "~4.15.5",
-    "hbs": "~4.0.1",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "axios": "^0.18.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc2",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.7",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "concurrently": "^3.5.1",
+    "mongodb": "^3.0.5",
+    "npm": "^5.8.0"
   }
 }
