--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start:local": "NODE_ENV=PRODUCTION node index.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
+    "esm": "^3.2.22",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "log4js": "^4.1.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc2",
     "morgan": "~1.9.0",
