--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "esm": "^3.2.22",
-    "express": "~4.15.5",
-    "hbs": "~4.0.1",
+    "express": "^4.16.4",
     "log4js": "^4.1.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc2",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "nodemon": "^1.18.11"
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.3.0",
+    "nodemon": "^1.18.11",
+    "prettier": "^1.16.4"
   }
 }
